fixed 100% height for #dummy on desktop. (caused the navbar to be temporarily invisible)

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,8 +5,8 @@ body {
 }
 
 #dummy {
+  display: block;
   grid-area: DUM;
-  height: 100%;
   width: 75px;
 }
 
